SCSL/build/lib/SCSL/Specifications/peclMultiSpecParser.py
# Generated from peclMultiSpec.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class peclMultiSpecParser ( Parser ):

    grammarFileName = "peclMultiSpec.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<'", "'>'", "'<='", "'>='", "'='", "'!='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\\n'", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "','", "'duration'", "'timeBetween'", 
                     "'whenever'", "'eventually'", "'.during'", "'value'", 
                     "'in'", "'None'", "'True'", "'False'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "STR", "REAL", 
                      "INT", "NEWLINE", "WS", "LINE_COMMENT", "LB", "RB", 
                      "COMMA", "DURATION", "TIMEBETWEEN", "WHENEVER", "EVENTUALLY", 
                      "DURING", "VALUEKWS", "IN", "PYTHONNONE", "PYTHONTRUE", 
                      "PYTHONFALSE", "ID" ]

    RULE_cmp = 0
    RULE_number = 1
    RULE_constant = 2
    RULE_string = 3
    RULE_python_symbol = 4
    RULE_peclMultiSpec = 5
    RULE_block = 6
    RULE_duration = 7
    RULE_timeBetween = 8
    RULE_whenever = 9
    RULE_predicate = 10
    RULE_predicate_name = 11
    RULE_dsl_predicate = 12
    RULE_predicate_args = 13
    RULE_procedure_qualifier = 14
    RULE_guard = 15
    RULE_expectation = 16
    RULE_constraint = 17
    RULE_function_constraint = 18
    RULE_function_measurement = 19
    RULE_state_constraint = 20
    RULE_state_measurement = 21

    ruleNames =  [ "cmp", "number", "constant", "string", "python_symbol", 
                   "peclMultiSpec", "block", "duration", "timeBetween", 
                   "whenever", "predicate", "predicate_name", "dsl_predicate", 
                   "predicate_args", "procedure_qualifier", "guard", "expectation", 
                   "constraint", "function_constraint", "function_measurement", 
                   "state_constraint", "state_measurement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    STR=7
    REAL=8
    INT=9
    NEWLINE=10
    WS=11
    LINE_COMMENT=12
    LB=13
    RB=14
    COMMA=15
    DURATION=16
    TIMEBETWEEN=17
    WHENEVER=18
    EVENTUALLY=19
    DURING=20
    VALUEKWS=21
    IN=22
    PYTHONNONE=23
    PYTHONTRUE=24
    PYTHONFALSE=25
    ID=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CmpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_cmp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmp" ):
                return visitor.visitCmp(self)
            else:
                return visitor.visitChildren(self)




    def cmp(self):

        localctx = peclMultiSpecParser.CmpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_cmp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 126) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(peclMultiSpecParser.INT, 0)

        def REAL(self):
            return self.getToken(peclMultiSpecParser.REAL, 0)

        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_number

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = peclMultiSpecParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(peclMultiSpecParser.NumberContext,0)


        def string(self):
            return self.getTypedRuleContext(peclMultiSpecParser.StringContext,0)


        def python_symbol(self):
            return self.getTypedRuleContext(peclMultiSpecParser.Python_symbolContext,0)


        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_constant

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant" ):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = peclMultiSpecParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constant)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.number()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.string()
                pass
            elif token in [23, 24, 25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.python_symbol()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR(self):
            return self.getToken(peclMultiSpecParser.STR, 0)

        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_string

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = peclMultiSpecParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(peclMultiSpecParser.STR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Python_symbolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PYTHONNONE(self):
            return self.getToken(peclMultiSpecParser.PYTHONNONE, 0)

        def PYTHONTRUE(self):
            return self.getToken(peclMultiSpecParser.PYTHONTRUE, 0)

        def PYTHONFALSE(self):
            return self.getToken(peclMultiSpecParser.PYTHONFALSE, 0)

        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_python_symbol

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPython_symbol" ):
                return visitor.visitPython_symbol(self)
            else:
                return visitor.visitChildren(self)




    def python_symbol(self):

        localctx = peclMultiSpecParser.Python_symbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_python_symbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 58720256) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PeclMultiSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(peclMultiSpecParser.BlockContext)
            else:
                return self.getTypedRuleContext(peclMultiSpecParser.BlockContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(peclMultiSpecParser.NEWLINE)
            else:
                return self.getToken(peclMultiSpecParser.NEWLINE, i)

        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_peclMultiSpec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPeclMultiSpec" ):
                return visitor.visitPeclMultiSpec(self)
            else:
                return visitor.visitChildren(self)




    def peclMultiSpec(self):

        localctx = peclMultiSpecParser.PeclMultiSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_peclMultiSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 459776) != 0):
                self.state = 59
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [16, 17, 18]:
                    self.state = 57
                    self.block()
                    pass
                elif token in [10]:
                    self.state = 58
                    self.match(peclMultiSpecParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def duration(self):
            return self.getTypedRuleContext(peclMultiSpecParser.DurationContext,0)


        def timeBetween(self):
            return self.getTypedRuleContext(peclMultiSpecParser.TimeBetweenContext,0)


        def whenever(self):
            return self.getTypedRuleContext(peclMultiSpecParser.WheneverContext,0)


        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = peclMultiSpecParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.duration()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.timeBetween()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.whenever()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DURATION(self):
            return self.getToken(peclMultiSpecParser.DURATION, 0)

        def LB(self):
            return self.getToken(peclMultiSpecParser.LB, 0)

        def predicate(self):
            return self.getTypedRuleContext(peclMultiSpecParser.PredicateContext,0)


        def RB(self):
            return self.getToken(peclMultiSpecParser.RB, 0)

        def cmp(self):
            return self.getTypedRuleContext(peclMultiSpecParser.CmpContext,0)


        def number(self):
            return self.getTypedRuleContext(peclMultiSpecParser.NumberContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(peclMultiSpecParser.NEWLINE)
            else:
                return self.getToken(peclMultiSpecParser.NEWLINE, i)

        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_duration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDuration" ):
                return visitor.visitDuration(self)
            else:
                return visitor.visitChildren(self)




    def duration(self):

        localctx = peclMultiSpecParser.DurationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_duration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(peclMultiSpecParser.DURATION)
            self.state = 70
            self.match(peclMultiSpecParser.LB)
            self.state = 71
            self.predicate()
            self.state = 72
            self.match(peclMultiSpecParser.RB)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 73
                self.match(peclMultiSpecParser.NEWLINE)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.cmp()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 80
                self.match(peclMultiSpecParser.NEWLINE)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.number()
            self.state = 90
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 87
                    self.match(peclMultiSpecParser.NEWLINE) 
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeBetweenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIMEBETWEEN(self):
            return self.getToken(peclMultiSpecParser.TIMEBETWEEN, 0)

        def predicate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(peclMultiSpecParser.PredicateContext)
            else:
                return self.getTypedRuleContext(peclMultiSpecParser.PredicateContext,i)


        def COMMA(self):
            return self.getToken(peclMultiSpecParser.COMMA, 0)

        def cmp(self):
            return self.getTypedRuleContext(peclMultiSpecParser.CmpContext,0)


        def number(self):
            return self.getTypedRuleContext(peclMultiSpecParser.NumberContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(peclMultiSpecParser.NEWLINE)
            else:
                return self.getToken(peclMultiSpecParser.NEWLINE, i)

        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_timeBetween

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimeBetween" ):
                return visitor.visitTimeBetween(self)
            else:
                return visitor.visitChildren(self)




    def timeBetween(self):

        localctx = peclMultiSpecParser.TimeBetweenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_timeBetween)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(peclMultiSpecParser.TIMEBETWEEN)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 94
                self.match(peclMultiSpecParser.NEWLINE)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.predicate()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 101
                self.match(peclMultiSpecParser.NEWLINE)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(peclMultiSpecParser.COMMA)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 108
                self.match(peclMultiSpecParser.NEWLINE)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.predicate()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 115
                self.match(peclMultiSpecParser.NEWLINE)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.cmp()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 122
                self.match(peclMultiSpecParser.NEWLINE)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.number()
            self.state = 132
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 129
                    self.match(peclMultiSpecParser.NEWLINE) 
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WheneverContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHENEVER(self):
            return self.getToken(peclMultiSpecParser.WHENEVER, 0)

        def guard(self):
            return self.getTypedRuleContext(peclMultiSpecParser.GuardContext,0)


        def EVENTUALLY(self):
            return self.getToken(peclMultiSpecParser.EVENTUALLY, 0)

        def expectation(self):
            return self.getTypedRuleContext(peclMultiSpecParser.ExpectationContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(peclMultiSpecParser.NEWLINE)
            else:
                return self.getToken(peclMultiSpecParser.NEWLINE, i)

        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_whenever

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhenever" ):
                return visitor.visitWhenever(self)
            else:
                return visitor.visitChildren(self)




    def whenever(self):

        localctx = peclMultiSpecParser.WheneverContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whenever)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(peclMultiSpecParser.WHENEVER)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 136
                self.match(peclMultiSpecParser.NEWLINE)
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.guard()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 143
                self.match(peclMultiSpecParser.NEWLINE)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(peclMultiSpecParser.EVENTUALLY)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 150
                self.match(peclMultiSpecParser.NEWLINE)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 156
            self.expectation()
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 157
                    self.match(peclMultiSpecParser.NEWLINE) 
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dsl_predicate(self):
            return self.getTypedRuleContext(peclMultiSpecParser.Dsl_predicateContext,0)


        def procedure_qualifier(self):
            return self.getTypedRuleContext(peclMultiSpecParser.Procedure_qualifierContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(peclMultiSpecParser.NEWLINE)
            else:
                return self.getToken(peclMultiSpecParser.NEWLINE, i)

        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_predicate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate" ):
                return visitor.visitPredicate(self)
            else:
                return visitor.visitChildren(self)




    def predicate(self):

        localctx = peclMultiSpecParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_predicate)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.dsl_predicate()
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 164
                self.match(peclMultiSpecParser.NEWLINE)
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 170
            self.procedure_qualifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predicate_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(peclMultiSpecParser.ID, 0)

        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_predicate_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate_name" ):
                return visitor.visitPredicate_name(self)
            else:
                return visitor.visitChildren(self)




    def predicate_name(self):

        localctx = peclMultiSpecParser.Predicate_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_predicate_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(peclMultiSpecParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dsl_predicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate_name(self):
            return self.getTypedRuleContext(peclMultiSpecParser.Predicate_nameContext,0)


        def LB(self):
            return self.getToken(peclMultiSpecParser.LB, 0)

        def predicate_args(self):
            return self.getTypedRuleContext(peclMultiSpecParser.Predicate_argsContext,0)


        def RB(self):
            return self.getToken(peclMultiSpecParser.RB, 0)

        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_dsl_predicate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDsl_predicate" ):
                return visitor.visitDsl_predicate(self)
            else:
                return visitor.visitChildren(self)




    def dsl_predicate(self):

        localctx = peclMultiSpecParser.Dsl_predicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_dsl_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.predicate_name()
            self.state = 175
            self.match(peclMultiSpecParser.LB)
            self.state = 176
            self.predicate_args()
            self.state = 177
            self.match(peclMultiSpecParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predicate_argsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(peclMultiSpecParser.StringContext,0)


        def COMMA(self):
            return self.getToken(peclMultiSpecParser.COMMA, 0)

        def predicate_args(self):
            return self.getTypedRuleContext(peclMultiSpecParser.Predicate_argsContext,0)


        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_predicate_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate_args" ):
                return visitor.visitPredicate_args(self)
            else:
                return visitor.visitChildren(self)




    def predicate_args(self):

        localctx = peclMultiSpecParser.Predicate_argsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_predicate_args)
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.string()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.match(peclMultiSpecParser.COMMA)
                self.state = 181
                self.string()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                self.string()
                self.state = 183
                self.predicate_args()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Procedure_qualifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DURING(self):
            return self.getToken(peclMultiSpecParser.DURING, 0)

        def LB(self):
            return self.getToken(peclMultiSpecParser.LB, 0)

        def string(self):
            return self.getTypedRuleContext(peclMultiSpecParser.StringContext,0)


        def RB(self):
            return self.getToken(peclMultiSpecParser.RB, 0)

        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_procedure_qualifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure_qualifier" ):
                return visitor.visitProcedure_qualifier(self)
            else:
                return visitor.visitChildren(self)




    def procedure_qualifier(self):

        localctx = peclMultiSpecParser.Procedure_qualifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_procedure_qualifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(peclMultiSpecParser.DURING)
            self.state = 189
            self.match(peclMultiSpecParser.LB)
            self.state = 190
            self.string()
            self.state = 191
            self.match(peclMultiSpecParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GuardContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate(self):
            return self.getTypedRuleContext(peclMultiSpecParser.PredicateContext,0)


        def constraint(self):
            return self.getTypedRuleContext(peclMultiSpecParser.ConstraintContext,0)


        def getRuleIndex(self):
            return peclMultiSpecParser.RULE_guard

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGuard" ):
                return visitor.visitGuard(self)
            else:
                return visitor.visitChildren(self)




    def guard(self):

        localctx = peclMultiSpecParser.GuardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_guard)
        try:
            self.state = 195
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 193
                self.predicate()
                pass
            elif token in [13, 16, 21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.constraint()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpectationContext(ParserRuleContext):
        __slots__ = 'parser'
